--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,6 @@
 
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
+		<div id="root" class="page-container"></div>
 	</body>
 </html>
